another fixin on mobile page

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -39,6 +39,12 @@ $background-opacity: 0.8;
 }
 
 //media queries mixins
+@mixin mediaXsm {
+  @media screen and (max-width: 320px) {
+    @content;
+  }
+}
+
 @mixin mediaSm {
   @media screen and (max-width: 500px) {
     @content;
