--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -114,4 +114,18 @@
   .bio p {
     font-size: 1rem;
   }
+
+  .menu-nav .nav-item .nav-link {
+    font-size: 20px;
+  }
+}
+
+@include mediaXsm {
+  main#home .lg-heading {
+    font-size: 2.5rem;
+  }
+
+  main .icons {
+    font-size: 0.7rem;
+  }
 }
